segundo intento config

--- a/client-service-dev.properties
+++ b/client-service-dev.properties
@@ -1,4 +1,4 @@
-client.properties=Client Profile dev
+client.properties=Client profile dev
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.id.new_generator_mappings=false
