--- a/restaurant-service-dev.properties
+++ b/restaurant-service-dev.properties
@@ -1,4 +1,4 @@
-restaurant.properties=Restaurant Profile dev
+restaurant.properties=Restaurant profile dev
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.id.new_generator_mappings=false
