--- a/CustomerService-dev.properties
+++ b/CustomerService-dev.properties
@@ -3,7 +3,7 @@ customer.properties=Customer profile dev
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.id.new_generator_mappings=false
 
-spring.datasource.url=jdbc:mysql://172.18.0.2:3306/db_nuestra_empresa?allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.url=jdbc:mysql://mysql:3306/db_nuestra_empresa?allowPublicKeyRetrieval=true&useSSL=false
 
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.SQL=debug
